--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,16 +2,20 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-image: linear-gradient(to right, rgb(167, 50, 174), rgb(101, 9, 122));
 }
+
+.centralizaFlex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 .box{
     color: white;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.6);
     padding: 15px;
     border-radius: 15px;
-    width: relative;
+    width: 75%;
 }
 fieldset{
     border: 3px solid rgb(167, 50, 174);
@@ -85,9 +89,36 @@ table tr:nth-child(odd){
     position: inherit;
     border-radius: 10px;
 }
-#submit:hover, .btnPrimary:hover{
+.centerTextCell{
+    text-align: center;
+    vertical-align: center;
+}
+
+.estiloDaColunaDados {
+    padding-left: 10px;
+    vertical-align: center;
+    text-transform: capitalize;
+}
+.btnDeletar {
+    position: relative;
+    margin:0 auto;
+    background-image: linear-gradient(to right, rgb(167, 62, 70),rgb(191, 6, 34));
+    border: none;
+    padding: 6px 8px 3px 8px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 2px;
+    color: white;
+}
+.btnDeletar i {
+    margin: 0 auto;
+}
+
+#submit:hover, .btnPrimary:hover,.btnDeletar:hover{
     background-image: linear-gradient(to right, rgb(91, 27, 94), rgb(81, 13, 97))
 }
+
+
 
 @media (max-width: 784px) {
     .box{
